--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
     // GeoJSON
     const geojsonFiles = {
       "departement":[
-        { name:"Point de Repère routier", file:"geojson/D42/PR_Routier.geojson", style:{color:"blue",weight:3} },
-        { name:"CD2E", file:"geojson/D42/CD2E.geojson", style:{color:"blue",weight:3} },
-        { name:"Route Départementale", file:"geojson/D42/routes.geojson", style:{color:"green",weight:2} },
+        //{ name:"Point de Repère routier", file:"geojson/D42/PR_Routier.geojson", style:{color:"blue",weight:3} },
+        //{ name:"CD2E", file:"geojson/D42/CD2E.geojson", style:{color:"blue",weight:3} },
+        //{ name:"Route Départementale", file:"geojson/D42/routes.geojson", style:{color:"green",weight:2} },
         { name:"Communes de La Loire", file:"geojson/D42/communes-42-loire.geojson", style:{color:"darkred",weight:3} },
         { name:"Habitation", file:"geojson/D42/Zone_habitation.geojson", style:{color:"darkred",weight:3} },
         { name:"Lieu dit :: non habitable", file:"geojson/D42/Lieu_dit_non_habite.geojson", style:{color:"darkred",weight:3} },
@@ -171,14 +171,14 @@
       ],
       "risks":[
         { name:"Centre d'Icendie et Secours", file:"geojson/D42/CIS.geojson", style:{color:"red",weight:2,dashArray:'4 4'} },
-        { name:"Entreprises SEVESO", file:"geojson/D42/Ets_SEVESO.geojson", style:{color:"darkred",weight:3} },
-        { name:"Circuit déneigement DOVH ", file:"geojson/D42/Circuits_deneigement_dovh.geojson", style:{color:"orange",weight:2} },
-        { name:"Circuit déneigement PEVH ", file:"geojson/D42/Circuits_deneigement_pevh.geojson", style:{color:"blue",weight:2} },
+        //{ name:"Entreprises SEVESO", file:"geojson/D42/Ets_SEVESO.geojson", style:{color:"darkred",weight:3} },
+        //{ name:"Circuit déneigement DOVH ", file:"geojson/D42/Circuits_deneigement_dovh.geojson", style:{color:"orange",weight:2} },
+        //{ name:"Circuit déneigement PEVH ", file:"geojson/D42/Circuits_deneigement_pevh.geojson", style:{color:"blue",weight:2} },
         //{ name:"PPRI", file:"geojson/PPRI.geojson", style:{color:"purple",weight:2} },
-        { name:"Onde de submersion du barrage de Grangent", file:"geojson//D42/PPI_Onde_de_submersion_du_barrage_de_granjean.geojson", style:{color:"aqua",weight:2} }
+        //{ name:"Onde de submersion du barrage de Grangent", file:"geojson//D42/PPI_Onde_de_submersion_du_barrage_de_granjean.geojson", style:{color:"aqua",weight:2} }
       ],
       "AASC":[
-        { name:"PIO UDIOM(42)", file:"geojson/D42/UDIOM42.geojson", style:{color:"red",weight:2,dashArray:'4 4'} }
+        { name:"Points d'Intéret - UDIOM(42)", file:"geojson/D42/UDIOM42.geojson", style:{color:"red",weight:2,dashArray:'4 4'} }
       ],
       "Corse":[
         { name:"TKNET", file:"geojson/TKNET.geojson", style:{color:"darkred",weight:3} },
